--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#publications">Publications</a></li>
         <li><a href="#final-project">Final Project</a></li>
-        <li>
-          <a href="Yoklavich_CV.pdf" target="_blank">CV</a>
-        </li>
+        <li><a href="Yoklavich_CV.pdf" target="_blank">CV</a></li>
         <li><a href="https://www.linkedin.com/in/tyler-yoklavich/" target="_blank">LinkedIn</a></li>
+        <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">Personal Website</a></li>  <!-- Added link -->
       </ul>
     </nav>
   </div>
@@ -84,10 +83,9 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#publications">Publications</a></li>
         <li><a href="#final-project">Final Project</a></li>
-        <li>
-          <a href="Yoklavich_CV.pdf" target="_blank">CV</a>
-        </li>
+        <li><a href="Yoklavich_CV.pdf" target="_blank">CV</a></li>
         <li><a href="https://www.linkedin.com/in/tyler-yoklavich/" target="_blank">LinkedIn</a></li>
+        <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">Personal Website</a></li>  <!-- Added link -->
       </ul>
     </nav>
     <p>&copy; 2025 Tyler Yoklavich. All rights reserved.</p>
