--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="#final-project">Final Project</a></li>
         <li><a href="Yoklavich_CV.pdf" target="_blank">CV</a></li>
         <li><a href="https://www.linkedin.com/in/tyler-yoklavich/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">Personal Website</a></li>  <!-- Added link -->
+        <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">Personal Website</a></li>
       </ul>
     </nav>
   </div>
@@ -30,7 +30,9 @@
   <!-- Left Navigation -->
   <div id="left-nav">
     <h2>My Projects</h2>
-    <!-- Currently empty as requested -->
+    <ul>
+      <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">W14 Assignment</a></li>
+    </ul>
   </div>
 
   <!-- Main Content -->
@@ -85,7 +87,7 @@
         <li><a href="#final-project">Final Project</a></li>
         <li><a href="Yoklavich_CV.pdf" target="_blank">CV</a></li>
         <li><a href="https://www.linkedin.com/in/tyler-yoklavich/" target="_blank">LinkedIn</a></li>
-        <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">Personal Website</a></li>  <!-- Added link -->
+        <li><a href="https://content.csbs.utah.edu/~u1223045/" target="_blank">Personal Website</a></li>
       </ul>
     </nav>
     <p>&copy; 2025 Tyler Yoklavich. All rights reserved.</p>
